@@ -5,11 +5,13 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: column policy property was missing in SHOW CREATE TABLE result
+
  - Fixed a race condition that could cause queries with a high limit to fail
    due to a missing job context.
 
  - Updated crate-admin to 0.14.2 which includes the following changes:
-    
+
     - added support for line breaks in console result table
 
  - Added SHOW CREATE TABLE statement to dump the schema of a user created table
